src/test/deca/context/invalid/ContextSansObjet/Identification/intNullInit.deca
//Description
//  Initialisation d'une variable int avec null
//
//Réponse
//  Erreur contextuelle ligne 9
//  type incompatible

{
    int x = null;
}